@@ -1,0 +1,38 @@
+/* Automatically generated by the program "arrow" (arrow16.c) */
+
+enum {arrow_width=32, arrow_height=32, arrow_area=1024};
+
+static unsigned int arrow[64]={
+	0x00000000,0x80000000,
+	0x00000000,0xc0000000,
+	0x40000000,0xa0000000,
+	0x60000000,0x90000000,
+	0x70000000,0x88000000,
+	0x78000000,0x84000000,
+	0x7c000000,0x82000000,
+	0x7e000000,0x81000000,
+	0x7f000000,0x80800000,
+	0x7f800000,0x80400000,
+	0x7c000000,0x83800000,
+	0x6c000000,0x92000000,
+	0x46000000,0xa9000000,
+	0x06000000,0xc9000000,
+	0x03000000,0x04800000,
+	0x03000000,0x04800000,
+	0x00000000,0x03000000,
+	0x00000000,0x00000000,
+	0x00000000,0x00000000,
+	0x00000000,0x00000000,
+	0x00000000,0x00000000,
+	0x00000000,0x00000000,
+	0x00000000,0x00000000,
+	0x00000000,0x00000000,
+	0x00000000,0x00000000,
+	0x00000000,0x00000000,
+	0x00000000,0x00000000,
+	0x00000000,0x00000000,
+	0x00000000,0x00000000,
+	0x00000000,0x00000000,
+	0x00000000,0x00000000,
+	0x00000000,0x00000000,
+};
