@@ -1,6 +1,13 @@
  What's New for Links2 PSP Port
 ================================
 
+links-2.1pre23 PSP r1xxx (2006-08-xx)
+NEW FEATURES
+(raf) Using a new mouse cursor (Edited off of the freely available theme http://www.kde-look.org/content/show.php?content=13524)
+(raf) Implemented h/w double buffering to go along the s/w double buffering (more like triple buffering). This solves the flickering of danzeff.
+BUG FIXES
+
+
 links-2.1pre23 PSP r1222 (2006-08-04)
 NEW FEATURES
 (raf) Cookie save/restore patch from cvs.pld.org.pl/SOURCES/links2-cookies-save.patch?rev=1.2 applied.
